--- a/index.html
+++ b/index.html
@@ -44,20 +44,44 @@
     <!-- Plant -->
     <section class="plant pt-3 fixed">
         <h2 class="title text-center display-2">Mes Plantes</h2>
-        <div class="wrapper">
-            <i id="left" class="bi bi-caret-left"></i>
-            <div class="custom-carousel">
-                <img src="img/img-1.jpg" alt="img-1" draggable="false">
-                <img src="img/img-2.jpg" alt="img-2" draggable="false">
-                <img src="img/img-3.jpg" alt="img-3" draggable="false">
-                <img src="img/img-4.jpg" alt="img-4" draggable="false">
-                <img src="img/img-5.jpg" alt="img-5" draggable="false">
-                <img src="img/img-6.jpg" alt="img-6" draggable="false">
-                <img src="img/img-7.jpg" alt="img-7" draggable="false">
-                <img src="img/img-8.jpg" alt="img-8" draggable="false">
-                <img src="img/img-9.jpg" alt="img-9" draggable="false">
+
+        <div class="custom-container">
+            <div class="wrapper">
+                <i id="left" class="bi bi-caret-left"></i>
+                <ul class="carousel">
+                <li class="card">
+                    <div class="img"><img src="images/img-1.jpg" alt="img" draggable="false"></div>
+                    <h2>Blanche Pearson</h2>
+                    <span>Sales Manager</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/img-2.jpg" alt="img" draggable="false"></div>
+                    <h2>Joenas Brauers</h2>
+                    <span>Web Developer</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/img-3.jpg" alt="img" draggable="false"></div>
+                    <h2>Lariach French</h2>
+                    <span>Online Teacher</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/img-4.jpg" alt="img" draggable="false"></div>
+                    <h2>James Khosravi</h2>
+                    <span>Freelancer</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/img-5.jpg" alt="img" draggable="false"></div>
+                    <h2>Kristina Zasiadko</h2>
+                    <span>Bank Manager</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/img-6.jpg" alt="img" draggable="false"></div>
+                    <h2>Donald Horton</h2>
+                    <span>App Designer</span>
+                </li>
+                </ul>
+                <i id="right" class="bi bi-caret-right"></i>
             </div>
-            <i id="right" class="bi bi-caret-right"></i>
         </div>
     </section>
     <!-- /Plant -->
@@ -75,6 +99,7 @@
         <img src="img/img-7.jpg" alt="img-7">
         <img src="img/img-8.jpg" alt="img-8">
         <img src="img/img-9.jpg" alt="img-9">
+
     </section>
     <!-- /Annonce -->
 
