--- a/index.html
+++ b/index.html
@@ -50,32 +50,32 @@
                 <i id="left" class="bi bi-caret-left"></i>
                 <ul class="carousel">
                 <li class="card">
-                    <div class="img"><img src="images/img-1.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="img/img-1.jpg" alt="img" draggable="false"></div>
                     <h2>Blanche Pearson</h2>
                     <span>Sales Manager</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/img-2.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="img/img-2.jpg" alt="img" draggable="false"></div>
                     <h2>Joenas Brauers</h2>
                     <span>Web Developer</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/img-3.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="img/img-3.jpg" alt="img" draggable="false"></div>
                     <h2>Lariach French</h2>
                     <span>Online Teacher</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/img-4.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="img/img-4.jpg" alt="img" draggable="false"></div>
                     <h2>James Khosravi</h2>
                     <span>Freelancer</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/img-5.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="img/img-5.jpg" alt="img" draggable="false"></div>
                     <h2>Kristina Zasiadko</h2>
                     <span>Bank Manager</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/img-6.jpg" alt="img" draggable="false"></div>
+                    <div class="img"><img src="img/img-6.jpg" alt="img" draggable="false"></div>
                     <h2>Donald Horton</h2>
                     <span>App Designer</span>
                 </li>
@@ -87,19 +87,35 @@
     <!-- /Plant -->
 
     <!-- Annonce -->
-    <section class="annonce pt-3">
+    <section class="annonce pt-3 ">
         <h2 class="title text-center display-2">Les Annonces</h2>
 
-        <img src="img/img-1.jpg" alt="img-1">
-        <img src="img/img-2.jpg" alt="img-2">
-        <img src="img/img-3.jpg" alt="img-3">
-        <img src="img/img-4.jpg" alt="img-4">
-        <img src="img/img-5.jpg" alt="img-5">
-        <img src="img/img-6.jpg" alt="img-6">
-        <img src="img/img-7.jpg" alt="img-7">
-        <img src="img/img-8.jpg" alt="img-8">
-        <img src="img/img-9.jpg" alt="img-9">
-
+        <div class="row text-center gx-5">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                <div class="img"><img src="img/img-4.jpg" alt="img" draggable="false"></div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                <div class="img"><img src="img/img-2.jpg" alt="img" draggable="false"></div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                <div class="img"><img src="img/img-3.jpg" alt="img" draggable="false"></div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                <div class="img"><img src="img/img-5.jpg" alt="img" draggable="false"></div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                <div class="img"><img src="img/img-4.jpg" alt="img" draggable="false"></div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                <div class="img"><img src="img/img-2.jpg" alt="img" draggable="false"></div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                <div class="img"><img src="img/img-3.jpg" alt="img" draggable="false"></div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                <div class="img"><img src="img/img-5.jpg" alt="img" draggable="false"></div>
+            </div>
+        </div>
     </section>
     <!-- /Annonce -->
 
