--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             </div>
             <div id="mainListDiv" class="main_list">
                 <ul class="navlinks">
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li>            
                         <button class="btn rounded">
                             Uploader
