--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div id="mainListDiv" class="main_list">
                 <ul class="navlinks">
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li>            
                         <button class="btn rounded">
                             Uploader
