--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             </div>
             <div id="mainListDiv" class="main_list">
                 <ul class="navlinks">
-                    <li><a href="contact.html">Contact</a></li>
+                    <li>
+                        <a href="#">Profile</a>
+                    </li>
                     <li>            
                         <button type="button" class="btn rounded btn-upload" data-bs-toggle="modal" data-bs-target="#uploadModal" data-bs-owner-id="@upload-owner-id">
                             Uploader
