--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
                 <div class="card m-auto" >
                     <img src="img/img-1.jpg" alt="img" draggable="false">
                     <div class="card-body">
-                      <h5 class="card-title">planet_name</h5>
+                      <h5 class="card-title">plant_name</h5>
                       <p class="card-description text-muted">family_name</p>
-                      <p class="card-text">planet_description</p>
-                      <button type="button" class="btn">Button</button>
+                      <p class="card-text">plant_description</p>
+                      <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickedPublishedModal" data-bs-plant="@plant1-id">Intereseted</button>
                     </div>
                   </div>
             </div>
@@ -179,10 +179,10 @@
                 <div class="card m-auto">
                     <img src="img/img-4.jpg" alt="img">
                     <div class="card-body">
-                      <h5 class="card-title">planet_name</h5>
+                      <h5 class="card-title">plant_name</h5>
                       <p class="card-description text-muted">family_name</p>
-                      <p class="card-text">planet_description</p>
-                      <button type="button" class="btn">Button</button>
+                      <p class="card-text">plant_description</p>
+                      <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickedPublishedModal" data-bs-plant="@plant1-id">Intereseted</button>
                     </div>
                   </div>
             </div>
@@ -190,10 +190,10 @@
                 <div class="card m-auto" >                    
                     <img src="img/img-3.jpg" alt="img" draggable="false">
                     <div class="card-body">
-                      <h5 class="card-title">planet_name</h5>
+                      <h5 class="card-title">plant_name</h5>
                       <p class="card-description text-muted">family_name</p>
-                      <p class="card-text">planet_description</p>
-                      <button type="button" class="btn">Button</button>
+                      <p class="card-text">plant_description</p>
+                      <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickedPublishedModal" data-bs-plant="@plant1-id">Intereseted</button>
                     </div>
                   </div>
             </div>
@@ -201,10 +201,10 @@
                 <div class="card m-auto" >
                     <img src="img/img-8.jpg" alt="img" draggable="false">
                     <div class="card-body">
-                      <h5 class="card-title">planet_name</h5>
+                      <h5 class="card-title">plant_name</h5>
                       <p class="card-description text-muted">family_name</p>
-                      <p class="card-text">planet_description</p>
-                      <button type="button" class="btn">Button</button>
+                      <p class="card-text">plant_description</p>
+                      <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickedPublishedModal" data-bs-plant="@plant1-id">Intereseted</button>
                     </div>
                   </div>
             </div>
@@ -212,10 +212,10 @@
                 <div class="card m-auto" >
                     <img src="img/img-9.jpg" alt="img" draggable="false">
                     <div class="card-body">
-                      <h5 class="card-title">planet_name</h5>
+                      <h5 class="card-title">plant_name</h5>
                       <p class="card-description text-muted">family_name</p>
-                      <p class="card-text">planet_description</p>
-                      <button type="button" class="btn">Button</button>
+                      <p class="card-text">plant_description</p>
+                      <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickedPublishedModal" data-bs-plant="@plant1-id">Intereseted</button>
                     </div>
                   </div>
             </div>
@@ -223,10 +223,10 @@
                 <div class="card m-auto" >
                     <img src="img/img-5.jpg" alt="img" draggable="false">
                     <div class="card-body">
-                      <h5 class="card-title">planet_name</h5>
+                      <h5 class="card-title">plant_name</h5>
                       <p class="card-description text-muted">family_name</p>
-                      <p class="card-text">planet_description</p>
-                      <button type="button" class="btn">Button</button>
+                      <p class="card-text">plant_description</p>
+                      <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickedPublishedModal" data-bs-plant="@plant1-id">Intereseted</button>
                     </div>
                   </div>
             </div>
@@ -234,10 +234,10 @@
                 <div class="card m-auto" >
                     <img src="img/img-7.jpg" alt="img" draggable="false">
                     <div class="card-body">
-                      <h5 class="card-title">planet_name</h5>
+                      <h5 class="card-title">plant_name</h5>
                       <p class="card-description text-muted">family_name</p>
-                      <p class="card-text">planet_description</p>
-                      <button type="button" class="btn">Button</button>
+                      <p class="card-text">plant_description</p>
+                      <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickedPublishedModal" data-bs-plant="@plant1-id">Intereseted</button>
                     </div>
                   </div>
             </div>
@@ -245,10 +245,10 @@
                 <div class="card m-auto" >
                     <img src="img/img-2.jpg" alt="img" draggable="false">
                     <div class="card-body">
-                      <h5 class="card-title">planet_name</h5>
+                      <h5 class="card-title">plant_name</h5>
                       <p class="card-description text-muted">family_name</p>
-                      <p class="card-text">planet_description</p>
-                      <button type="button" class="btn">Button</button>
+                      <p class="card-text">plant_description</p>
+                      <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickedPublishedModal" data-bs-plant="@plant1-id">Intereseted</button>
                     </div>
                   </div>
             </div>
@@ -256,10 +256,10 @@
                 <div class="card m-auto" >
                     <img src="img/img-5.jpg" alt="img" draggable="false">
                     <div class="card-body">
-                      <h5 class="card-title">planet_name</h5>
+                      <h5 class="card-title">plant_name</h5>
                       <p class="card-description text-muted">family_name</p>
-                      <p class="card-text">planet_description</p>
-                      <button type="button" class="btn">Button</button>
+                      <p class="card-text">plant_description</p>
+                      <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickedPublishedModal" data-bs-plant="@plant1-id">Intereseted</button>
                     </div>
                   </div>
             </div>
@@ -267,10 +267,28 @@
     </section>
     <!-- /Annonce -->
 
-    <!-- Footer -->
-     
+    <!-- Modal for annonce -->
+    <div class="modal fade" id="clickedPublishedModal" tabindex="-1" aria-labelledby="clickedPublishedModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="clickedPublishedModalLabel">Save this plant</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Are you sure ?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-save">Save changes</button>
+            </div>
+          </div>
+        </div>
+    </div>
+    <!-- /Modal for annonce -->
 
-<!-- Footer -->
+
+    <!-- Footer -->
     <footer class="text-center text-lg-start mt-5 rounded-top">
     
         <!-- Section: Links  -->
